--- a/_includes/all.html
+++ b/_includes/all.html
@@ -1,18 +1,5 @@
----
-layout: default
----
-<div class="post">
-
-  <div class="jumbotron">
-    <h1 class="post-title">{{ page.title }}</h1>
-
-
-  <article class="post-content">
-    {{ content }}
-  </article>
-    </div>
 {% for post in site.posts %}
-          {% if post.categories contains {{page.title}} %}
+          {% if post.title %}
           
 		  <div class="well">
 		  <table class="table">
