--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,11 @@
 <header class="site-header">
+
+
 <div class="navbar navbar-inverse navbar-static-top">
 <div class="container">
 <div class="navbar-header">
 <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
+
 <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 <div class="sr-only">Toggle Navigation</div>
 <span class="icon-bar"></span>
@@ -10,7 +13,15 @@
 <span class="icon-bar"></span>
 </button>
 </div>
+
 <div class="trigger">
+<div class="nav navbar-nav navbar-form dropdown">
+                <!-- Search text box -->
+                <input id="search_input" data-toggle="dropdown" type="text" class="form-control" placeholder="Search" autofocus="autofocus" autocomplete="off" onkeyup="checkTextField();" />
+                <!-- Search results styled as a dropdown menu -->
+                <ul id="search_results" class="dropdown-menu" role="menu">
+                </ul>
+            </div>
 <ul class="nav navbar-nav navbar-right navbar-collapse collapse">
 
         {% for page in site.pages %}
@@ -26,33 +37,6 @@
 
 
 
-<!--  <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
-
-    <nav class="site-nav">
-     <a href="#" class="menu-icon">
-        <svg viewBox="0 0 18 15">
-          <path fill="#424242" d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>
-          <path fill="#424242" d="M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0c0-0.82,0.665-1.484,1.484-1.484 h15.031C17.335,6.031,18,6.696,18,7.516L18,7.516z"/>
-          <path fill="#424242" d="M18,13.516C18,14.335,17.335,15,16.516,15H1.484C0.665,15,0,14.335,0,13.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.031C17.335,12.031,18,12.696,18,13.516L18,13.516z"/>
-        </svg>
-      </a>
-
-
-
-
-      <div class="trigger">
-        {% for page in site.pages %}
-          {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-          {% endif %}
-        {% endfor %}
-      </div>
-	  
-    </nav>
-
-  </div>
-  -->
 
 </header>
