--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,2 +1,4 @@
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+ <script src="/js/jquery.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
+  <script src="/js/search.js"></script>
+  <script src="/js/snap.svg-min.js"></script>
