--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -3,11 +3,15 @@
  */
 .site-header {
     border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
     min-height: 56px;
+
 
     // Positioning context for the mobile navigation icon
     position: relative;
+}
+.navbar{
+
+margin-bottom: 0;
 }
 
 .site-title {
@@ -87,13 +91,18 @@
 }
 
 
-
 /**
  * Site footer
  */
 .site-footer {
     border-top: 1px solid $grey-color-light;
     padding: $spacing-unit 0;
+ background: $footer-bg;
+   -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
 }
 
 .footer-heading {
@@ -193,6 +202,11 @@
 /**
  * Posts
  */
+ 
+.post{
+background-color: $seahorse3-color;
+
+} 
 .post-header {
     margin-bottom: $spacing-unit;
 }
@@ -234,3 +248,34 @@
         }
     }
 }
+
+/**
+ *home page
+ */
+.panel-cover {
+
+height: 350px;
+ background: url(/img/seahorses.jpg) no-repeat center fixed;
+   -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-position: 0 -20px;
+ z-index: 1;
+ }
+ 
+.panel-prof {
+margin: -20px 0;
+padding-top: 20px;
+background-color: rgba(0, 0, 0, .9);
+position: relative;
+} 
+.prof-pic {
+border: 5px solid white;
+max-height: 200px;
+} 
+
+.prologue blockquote {
+margin: 12% 0;
+color: white;
+} 
