remove sample content, revise blockquotes, add image fadein on load

--- a/_includes/js.html
+++ b/_includes/js.html
@@ -2,3 +2,7 @@
   <script src="/js/bootstrap.min.js"></script>
   <script src="/js/search.js"></script>
   <script src="/js/snap.svg-min.js"></script>
+  
+  <script>$('img').load(function(){
+  $(this).fadeIn('fast');
+  });</script>
