--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,15 +2,15 @@
 <html>
 {% include head.html %}
   <body>
-{% include header.html %}  
+  {% include header.html %}  
 <div class="panel-cover"></div>     
 <div class="panel panel-prof">
 <div class="wrapper">
 	<div class="row">
-	<div class="col-xs-4"><img src="/img/prof2.png" alt="" class="img-circle img-responsive prof-pic">
+	<div class="col-xs-4"><img src="/img/prof2.png" alt="phil gray" class="img-circle img-responsive prof-pic">
 	</div>
 	<div class="prologue col-xs-8 col">
-<blockquote><h3>cheers</h3><p>To failing, to allowing illusions to run wild, to creating fake dreams, to the currency of stories.</p></blockquote>
+<blockquote><h2>cheers</h2><p>To failing, to allowing illusions to run wild, to creating fake dreams.</p></blockquote>
 	</div>
 	</div>
 	</div>
