--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -204,7 +204,7 @@ margin-bottom: 0;
  */
  
 .post{
-background-color: $seahorse3-color;
+background-color: white;
 
 } 
 .post-header {
@@ -252,6 +252,7 @@ background-color: $seahorse3-color;
 /**
  *home page
  */
+  
 .panel-cover {
 
 height: 350px;
@@ -272,10 +273,9 @@ position: relative;
 } 
 .prof-pic {
 border: 5px solid white;
-max-height: 200px;
 } 
 
 .prologue blockquote {
-margin: 12% 0;
 color: white;
+margin: 12% 0;
 } 
