--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -255,7 +255,8 @@ background-color: white;
   
 .panel-cover {
 
-height: 350px;
+height: 250px;
+max-height: 250px;
  background: url(/img/seahorses.jpg) no-repeat center fixed;
  background-color: black;
    -webkit-background-size: cover;
@@ -267,6 +268,7 @@ height: 350px;
  }
  
 .panel-prof {
+background-color: black;
 margin: -20px 0;
 padding-top: 20px;
 background-color: rgba(0, 0, 0, .9);
