--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@
 	<div class="col-xs-4"><img src="/img/prof2.png" alt="phil gray" class="img-circle img-responsive prof-pic">
 	</div>
 	<div class="prologue col-xs-8 col">
-<blockquote><h2>cheers</h2><p>To failing, to allowing illusions to run wild, to creating fake dreams.</p></blockquote>
+<blockquote><p>To failing, to allowing illusions to run wild, to creating fake dreams.</p></blockquote>
 	</div>
 	</div>
 	</div>
