implement jscroll, add sample posts

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
 {% include head.html %}
   <body>
   <div class="wrapper-home">
@@ -11,15 +10,17 @@
 	<div class="col-xs-4"><img src="/img/prof2.png" alt="phil gray" class="img-circle img-responsive prof-pic">
 	</div>
 	<div class="prologue col-xs-8 col">
-<blockquote><p>To failing, to allowing illusions to run wild, to creating fake dreams.</p></blockquote>
+<blockquote><p>Allowing illusions to run wild, creating fake dreams.</p></blockquote>
 	</div>
 	</div>
 	</div>
 	</div>
 	</div>
 	<div class="page-content">
-	<div class="wrapper">{{ content }}</div>
+	<div class="wrapper">
+	{{ content }}
+	</div>
 </div>
    {% include footer.html %}
    </body>
-</html>
+   </html>
