--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,3 +1,4 @@
- <script src="/js/jquery.min.js"></script>
-  <script src="/js/bootstrap.min.js"></script>
-  <script src="/js/search.js"></script>
+<script src="/js/jquery.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/jquery.jscroll.min.js"></script>
+<script src="/js/search.js"></script>
