--- a/css/main.scss
+++ b/css/main.scss
@@ -2,43 +2,29 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 @charset "utf-8";
-
-
-
 // Our variables
 $base-font-family: Source Sans Pro, Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
-
 $spacing-unit:     30px;
-
 $text-color:       #111;
 $background-color: white;
 $brand-color:     black;
-
 $seahorse1-color: #7F7ECC;
 $seahorse2-color: #535399;
 $seahorse3-color: #B8DCFF;
 $seahorse4-color: #FFD7B0;
 $seahorse5-color: #CCB7AB;
 $seahorse6-color: #D0E4F7;
-
-
 $footer-bg: url(/img/skyseahorses.png) no-repeat center fixed;
-
 $grey-color:     black;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
-
 // Width of the content area
 $content-width:    800px;
-
 $on-palm:          600px;
 $on-laptop:        800px;
-
-
-
 // Using media queries with like this:
 // @include media-query($on-palm) {
 //     .wrapper {
@@ -51,12 +37,10 @@ $on-laptop:        800px;
         @content;
     }
 }
-
-
-
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
-        "base",
+		"bootstrap",
+		"base",
         "layout",
         "syntax-highlighting"
 ;
