add new posts, change prof statement

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@
 	<div class="col-xs-4"><img src="/img/prof2.png" alt="phil gray" class="img-circle img-responsive prof-pic">
 	</div>
 	<div class="prologue col-xs-8 col">
-<blockquote><p>Allowing illusions to run wild, creating fake dreams.</p></blockquote>
+<blockquote><p>Phil Gray is an IT professional who specializes in technical writing and web development. </p></blockquote>
 	</div>
 	</div>
 	</div>
