--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -231,3 +231,16 @@ color: white;
     display: inline-block;
 margin: 15% 0;
 } 
+
+.content {
+.img-responsive {
+margin: 0 auto;
+}
+.col-centered{
+float: none;
+margin: 0 auto;
+}
+
+
+}
+
