add google analytics to js in head

--- a/_includes/js.html
+++ b/_includes/js.html
@@ -2,3 +2,4 @@
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/jquery.jscroll.min.js"></script>
 <script src="/js/search.js"></script>
+<script src="/js/analytics.js"></script>
