--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@
   <body>
   <div class="wrapper-home">
   {% include header.html %}  
-<div class="panel-cover"></div>     
+<img src="/img/seahorses.jpg" alt="sea horses" class="img-responsive">   
 <div class="panel-prof">
 <div class="wrapper">
 	<div class="row">
