--- a/_includes/js.html
+++ b/_includes/js.html
@@ -2,6 +2,7 @@
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/jquery.jscroll.min.js"></script>
 <script src="/js/search.js"></script>
+<script src="/js/lightbox.min.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
