replace lightbox with swipebox

--- a/css/main.scss
+++ b/css/main.scss
@@ -42,6 +42,6 @@ $on-laptop:        800px;
 		"bootstrap",
 		"base",
         "layout",
-		"lightbox",
+		"swipebox",
         "syntax-highlighting"
 ;
