adjust homepage layout, use jumbotron and flexbox for prologue block, replace home post layout with default classes

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,13 +4,14 @@
   <div class="wrapper-home">
   {% include header.html %}  
 <img src="/img/seahorses.jpg" alt="sea horses" class="img-responsive">   
-<div class="panel-prof">
+<div class="jumbotron">
 <div class="wrapper">
 	<div class="row">
+	<div class="flexbox-container">
 	<div class="col-xs-4"><img src="/img/prof2.png" alt="phil gray" class="img-circle img-responsive prof-pic">
 	</div>
-	<div class="prologue col-xs-8 col">
-<blockquote><p>Phil Gray is an IT professional who specializes in digital content management and develoment. </p></blockquote>
+	<div class="prologue col-xs-8">
+<blockquote><p>phil gray, digital content developer</p></blockquote>
 	</div>
 	</div>
 	</div>
@@ -20,6 +21,7 @@
 	<div class="wrapper">
 	{{ content }}
 	</div>
+</div>
 </div>
    {% include footer.html %}
    </body>
