update to small caps and revise blockquote

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,7 @@
 {% include head.html %}
   <body>
   <div class="wrapper-home">
+  <div id="bg">
   {% include header.html %}  
 <img src="/img/seahorses.jpg" alt="sea horses" class="img-responsive">   
 <div class="jumbotron">
@@ -11,7 +12,8 @@
 	<div class="col-xs-4"><img src="/img/prof2.png" alt="phil gray" class="img-circle img-responsive prof-pic">
 	</div>
 	<div class="prologue col-xs-8">
-<blockquote><p>phil gray, digital content developer</p></blockquote>
+<blockquote><p>philgrayphilgray.com</p></blockquote>
+	</div>
 	</div>
 	</div>
 	</div>
