--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,11 +1,15 @@
 <!doctype html>
 {% include head.html %}
   <body>
-  <div class="wrapper-home">
-  <div id="bg">
+    <div class="wrapper-home">
   {% include header.html %}  
-<img src="/img/seahorses.jpg" alt="sea horses" class="img-responsive">   
-<div class="jumbotron">
+  <!-- Section 1 -->
+<section id="intro" data-speed="2" data-type="background">
+
+</section>
+<!-- Section 2 -->
+<section id="home" data-speed="4" data-type="background">
+    <div class="container">
 <div class="wrapper">
 	<div class="row">
 	<div class="flexbox-container">
@@ -18,12 +22,17 @@
 	</div>
 	</div>
 	</div>
-	</div>
-	<div class="page-content">
+</section>
+<!-- Section 3 -->
+<section id="about" data-speed="2" data-type="background">
+    <div class="container">
+    <div class="page-content">
 	<div class="wrapper">
 	{{ content }}
 	</div>
 </div>
+    </div>
+</section>
 </div>
    {% include footer.html %}
    </body>
