--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -214,10 +214,25 @@ background-color: white;
 
 
 #bg{
+background: url('/img/seahorses.jpg') no-repeat center center fixed;
+    color:#fff;
+    background-size:cover;
+	height: 500px;
+	z-index: 100;
+}
+
+section {
+    height:500px;
+    padding-top:50px;
+    padding-bottom:50px;
+    overflow:auto;
+	background-color: transparent;
+
 .jumbotron {
 background-color: rgba(0, 0, 0, .9);
 }
 }
+
 
 .page-content .jumbotron{
 background-color: rgba(0, 0, 0, .01);
@@ -278,3 +293,46 @@ padding: 5px 15px;
 fill: white;
 }
 }
+ 
+ 
+ 
+ #intro { 
+	background: url(/img/seahorses2.png) 50% 0 fixed;
+	-webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+    height: auto;  
+    margin: 0 auto; 
+    width: 100%; 
+    position: relative; 
+    box-shadow: 0 0 50px rgba(0,0,0,0.8);
+    padding: 190px 0;
+  @media screen and (min-width: 768px) {
+      padding: 210px 0;
+	background: url(/img/seahorses_large2.png) 50% 0 fixed;
+	-webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  }
+}
+#home { 
+	background-color: rgba(0, 0, 0, .9);
+    height: auto;  
+    margin: 0 auto; 
+    width: 100%; 
+    position: relative; 
+    box-shadow: 0 0 50px rgba(0,0,0,0.8);
+    padding: 0 0;
+}
+#about { 
+    height: auto;
+    margin: 0 auto; 
+    width: 100%; 
+    position: relative; 
+    box-shadow: 0 0 50px rgba(0,0,0,0.8);
+    padding: 10px 0;
+    color: #fff;
+}
+
