--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,13 +11,16 @@
 </button>
 </div>
 <div class="trigger">
+  <!-- Search text box 
 <div class="nav navbar-nav navbar-form dropdown">
-                <!-- Search text box -->
+              
                 <input id="search_input" data-toggle="dropdown" type="text" class="form-control" placeholder="Search" autofocus="autofocus" autocomplete="off" onkeyup="checkTextField();" />
-                <!-- Search results styled as a dropdown menu -->
-                <ul id="search_results" class="dropdown-menu" role="menu">
+                <!....Search results styled as a dropdown menu -->
+                <!--<ul id="search_results" class="dropdown-menu" role="menu">
                 </ul>
+				
             </div>
+			-->
 <ul class="nav navbar-nav navbar-right navbar-collapse collapse">
 {% for post in site.categories %}
 	<li><a href="/{{post[0] | prepend: site.baseurl }}">{{ post[0] }} <span class="badge"> {{post[1] | size }}</span></a></li>
