change blockquote in home.html layout, test codeanywhere

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@
 	<div class="col-xs-4"><img src="/img/prof2.png" alt="phil gray" class="img-circle img-responsive prof-pic">
 	</div>
 	<div class="prologue col-xs-8">
-<blockquote><p>philgrayphilgray.com</p></blockquote>
+<blockquote><p>where is phil?</p></blockquote>
 	</div>
 	</div>
 	</div>
