--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@
   {% include header.html %}  
   <!-- Section 1 -->
 <section id="intro" data-speed="2" data-type="background">
-
+	<h1>philgrayphilgray.com</h1>
 </section>
 <!-- Section 2 -->
 <section id="home" data-speed="4" data-type="background">
@@ -16,7 +16,7 @@
 	<div class="col-xs-4"><img src="/img/prof2.png" alt="phil gray" class="img-circle img-responsive prof-pic">
 	</div>
 	<div class="prologue col-xs-8">
-<blockquote><p>where is phil?</p></blockquote>
+<blockquote><p> {% assign post = site.posts.first %}{% if post.quote %}{{post.quote}}{% endif %}</p></blockquote>
 	</div>
 	</div>
 	</div>
@@ -35,6 +35,7 @@
 </section>
 </div>
    {% include footer.html %}
-   </body>
+
+</body>
 
    </html>
