--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,10 +1,10 @@
 <script src="/js/jquery-2.1.3.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/jquery.jscroll.min.js"></script>
-<script src="/js/search.js"></script>
+<!--<script src="/js/search.js"></script>-->
 <script src="/js/jquery.swipebox.min.js"></script>
-<script src="http://d3js.org/d3.v3.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/trianglify/0.3.0/trianglify.min.js"></script>
+<!--<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/trianglify/0.3.0/trianglify.min.js"></script>-->
 <script>
 (function() {
 	$('img').load(function() {
