--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -312,6 +312,7 @@ fill: white;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+height: 100%;
   }
 }
 #home { 
