--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -314,6 +314,13 @@ fill: white;
   @media screen and (min-width: 768px) {
       padding: 200px 0;
   }
+	   @media screen and (max-width: 768px) {
+     background: url(/img/fullskymobile.jpg) repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  }
 }
 #home { 
 	background-color: rgba(0, 0, 0, .9);
