--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -315,7 +315,7 @@ fill: white;
       padding: 200px 0;
   }
 	   @media screen and (max-width: 768px) {
-     background: url(/img/fullskymobile.jpg) repeat center center fixed; 
+     background: url(/img/fullskymobile.jpg)  50% 0 repeat fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
