--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,18 +5,18 @@
   {% include header.html %}  
   <!-- Section 1 -->
 <section id="intro" data-speed="2" data-type="background">
-	<h1>philgrayphilgray.com</h1>
+<span><h1 class="titletitle animated fadeIn">{{ site.title }}</h1></span>
 </section>
 <!-- Section 2 -->
-<section id="home" data-speed="1" data-type="background">
+<section id="home" data-speed="4" data-type="background">
     <div class="container">
 <div class="wrapper">
 	<div class="row">
 	<div class="flexbox-container">
-	<div class="col-xs-4"><img src="/img/prof2.png" alt="phil gray" class="img-circle img-responsive prof-pic">
+	<div class="col-xs-4 animated fadeIn"><img src="/img/prof2.png" alt="phil gray" class="img-circle img-responsive prof-pic">
 	</div>
 	<div class="prologue col-xs-8">
-<blockquote><p> {% assign post = site.posts.first %}{% if post.quote %}{{post.quote}}{% endif %}</p></blockquote>
+		<div class="animated bounceInDown"><blockquote><p> {% assign post = site.posts.first %}{% if post.quote %}{{post.quote}}{% endif %}</p></blockquote></div>
 	</div>
 	</div>
 	</div>
