--- a/css/main.scss
+++ b/css/main.scss
@@ -40,6 +40,7 @@ $on-laptop:        800px;
 }
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
+	"animate",
 		"bootstrap",
 		"base",
         "layout",
