add bg color to intro for img load

--- a/_includes/js.html
+++ b/_includes/js.html
@@ -46,7 +46,7 @@ $(window).scroll(function () {
 			$('.titletitle').addClass('slideOutDown');
         } else {
             $('.navbar').fadeIn();
-			$('.navbar li').addClass('animated bounce');
+			$('.navbar li a').addClass('animated bounce');
 			$('.titletitle').removeClass('slideOutDown').addClass('slideInUp');
         }
     } else {
