--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -305,6 +305,7 @@ fill: white;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+	  background-color: $grey-color-dark;
     height: auto;  
     margin: 0 auto; 
     width: 100%; 
