--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -317,6 +317,7 @@ fill: white;
   }
 	   @media screen and (max-width: 768px) {
      background: url(/img/fullskymobile.jpg)  50% 0 repeat fixed;
+		   background-color: $grey-color-dark;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
