--- a/_includes/js.html
+++ b/_includes/js.html
@@ -55,6 +55,10 @@ $(window).scroll(function () {
     }
     previousScroll = currentScroll;
 });
+	//fadeIn when everything loads. also uncomment in layout.scss
+/* 	$(window).load(function() {
+  // When the page has loaded
+  $("body").fadeIn(1000);
+}); */
 	
-
 </script>
