--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <div class="navbar navbar-inverse navbar-fixed-top">
 <div class="container">
 <div class="navbar-header">
-<a class="navbar-brand" href="/{{site.baseurl}}">{% include pgpglogo.svg %}</a>
+<a class="navbar-brand" href="/{{site.baseurl}}"><img src="/img/pgpglogo.svg" alt="pgpg" /></a>
 <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 <div class="sr-only">Toggle Navigation</div>
 <span class="icon-bar"></span>
