--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@
   {% include header.html %}  
   <!-- Section 1 -->
 <section id="intro" data-speed="2" data-type="background">
-<span><h1 class="titletitle animated fadeIn">{{ site.title }}</h1></span>
+<span><h1 class="titletitle animated fadeIn editable">{{ site.title }}</h1></span>
 </section>
 <!-- Section 2 -->
 <section id="home" data-speed="4" data-type="background">
