Updated '_layouts/home.html' via CloudCannon

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@
 	<div class="col-xs-4 animated fadeIn"><img src="/img/prof2.png" alt="phil gray" class="img-circle img-responsive prof-pic">
 	</div>
 	<div class="prologue col-xs-8">
-		<div class="animated bounceInDown"><blockquote><p> {% assign post = site.posts.first %}{% if post.quote %}{{post.quote}}{% endif %}</p></blockquote></div>
+		<div class="animated bounceInDown editable"><blockquote><p> {% assign post = site.posts.first %}{% if post.quote %}{{post.quote}}{% endif %}</p></blockquote></div>
 	</div>
 	</div>
 	</div>
