Updated '_includes/footer.html' via CloudCannon

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="site-footer">
+<footer class="site-footer editable">
   <div class="wrapper">
 <div class="row">
   <div class="col-xs-12 col-sm-5">
